<resources>
    <string name="app_name">"Schlaue Box"</string>
    <string name="app_generic_password">"Password"</string>
    <string name="app_generic_enter_ble">"Not in proximity"</string>
    <string name="title_activity_main_home">"Home"</string>
    <string name="locker_details_registration_body">"You currently don’t have access to this parcel lockers."</string>
    <string name="app_generic_privacy_policy">"Terms &amp; conditions"</string>
    <string name="ttc_main_conditions">"We are committed to protecting your privacy and take the security of our clients information very seriously.

Cookies Policy. Information and Use of Cookies.
What are Cookies?
Cookies are small amounts of information which some websites store on your computer to make it easier for you to log on to and use them during future visits. In reality, a cookie is a small text file which is stored by the user’s browser and contains data, not code, so it can’t contain a virus or spyware. This doesn’t mean that all cookies are harmless in intent, but they can only ever store information.

How we use your information

We ‘analytical’ cookies on this site to allow us to monitor website traffic and analyse how visitors use it via Google Analytics. This service tracks information about how visitors interact with the site, including the number of visitors to our website, where visitors have come to the website from and the pages they visit. We use this information to help us improve our website.

Such information will not identify you personally it is statistical data about our visitors and their use of our website. This statistical data is completely anonymous and does not identify any personal details whatsoever.

All computers have the ability to decline cookies. You can configure your web browser to refuse cookies, or to be informed if a cookie is set. You can find out how to do this by clicking help on your browser menu. By using our website, you agree that we can place these types of cookies on your device."</string>
    <string name="intro_welcome_slide_title">"Welcome"</string>
    <string name="intro_welcome_slide_content">"Great, that you have decided for our Smart Locker. Please check out the most important features of the App!"</string>
    <string name="intro_pickup_slide_title">"Pickup &amp; Send Parcel"</string>
    <string name="intro_pickup_slide_content">"With our app you can easily pick up parcels delivered to you at any convenient time. Sending a parcel has never been easier and more convenient."</string>
    <string name="intro_key_sharing_slide_title">"Access grant"</string>
    <string name="intro_key_sharing_slide_content">"Are you not in proximity of your Smart Locker but need to collect or send a parcel? Generate a permanent or temporary access to your Smart Locker for your family or friend."</string>
    <string name="intro_start_slide_content">"Already have an account?"</string>
    <string name="intro_register_your_account">"Register Your Account"</string>
    <string name="intro_register_show_password">"Show passwords"</string>
    <string name="send_parcel_title">"Send parcel"</string>
    <string name="sent_parcel_subtitle">"Sent parcel(s)"</string>
    <string name="send_parcel_button_title">"Send parcel"</string>
    <string name="key_sharing_content">"You currently didn’t share access to your parcel locker(s) with anyone."</string>
    <string name="app_generic_key_sharing">"Share access"</string>
    <string name="help_share_access_text">"• Start the \"Access sharing\" function in the app and press the \"+\" button
• Enter the e-mail address of the selected person. You can also choose these from your contact details.
• Select the type of access permission
- Full with sharing permissions: User can pick up all your parcels and share access to others.
- Only pickup parcel: user can pick up all your parcels.
• Press the button \"Allow access\""</string>
    <string name="help_send_parcel_text">"Make sure you have a stable internet connection, your Bluetooth is turned on, and you are near the smart box.
• Start the function \"Send package\" in the app
• Select the appropriate box size for your package
• Enter the last 4 digits of the tracking number of your parcel service provider
Alternatively, you can also create your own PIN and notify the person who picked it up
• Deposit the package and close the door
• Close the process with the button \"Exit\"
Attention: Depositing the parcel ensures it is securely protected until it is picked up. Register this pickup with the Pick@home website of your delivery service and note the location of the parcel box facility and the pickupPIN for the courier."</string>
    <string name="help_description_title">"Help"</string>
    <string name="help_table_title">"Available topics"</string>
    <string name="help_lbl_bottom">"For further questions send an E-Mail to:"</string>
    <string name="help_link">"info@schlauebox.ch"</string>
    <string name="help_pickup_parcel_content">"Make sure you have a stable internet connection, your Bluetooth is turned on, and you are near the smart box.
• Start the function \"pick up package\" in the app
• Lock icon \"red\": Press the lock icon to open the box
• Take the package out and close the door
• Close the process with the button \"Confirm\"
If several boxes are occupied with Packages for you, they will open one at a time.
• Lock symbol \"gray\": One or more of the above requirements are not met.
• If you are not near your Smart Box, you can give a third party temporary access to selected packages. Enter the e-mail address in the field provided."</string>
    <string name="peripheral_settings_share_access">"Share access to delivery (size: %s, created: %s)"</string>
    <string name="peripheral_settings_remove_access">"Remove temporary access from %s for Delivery %s (created on: %s)"</string>
    <string name="peripheral_settings_grant_access">"%s shared you access to delivery (size: %s, created: %s)"</string>
    <string name="peripheral_settings_remove_access_success">"Successfully deleted access to locker %s"</string>
    <string name="peripheral_settings_remove_access_error">"Error while deleting access to locker %s"</string>
    <string name="app_generic_size">"Size: %s"</string>
    <string name="nav_home_mpl_title">"Multiple"</string>
    <string name="nav_home_spl_title">"Single"</string>
    <string name="locker_details_registration_btn">"Request Access"</string>
    <string name="locker_details_registration_pending_body">"Thank you! Your request was submitted. We’ll notify you once your access has been granted."</string>
    <string name="nav_alarms_title">"Alarms"</string>
    <string name="nav_pickup_parcel_content_lock">"Tap on the Lock icon to open."</string>
    <string name="nav_pickup_parcel_content_unlock">"Please take your package and close locker door."</string>
    <string name="nav_pickup_parcel_unlock">"Unlocked"</string>
    <string name="nav_pickup_parcel_connecting">"Connecting"</string>
    <string name="nav_pickup_parcel_connecting_please_wait">"Please wait..."</string>
    <string name="nav_pickup_parcel_lock">"Locked"</string>
    <string name="nav_send_parcel_title">"Send Parcel"</string>
    <string name="nav_send_parcel_content_text">"The locker is now open. Please place your package and close the door."</string>
    <string name="nav_send_parcel_error">"Send parcel failed. Please try again."</string>
    <string name="nav_send_parcel_error_button">"Retry"</string>
    <string name="nav_send_parcel_failed">"The opening of the locker was unsuccessful, please try again!"</string>
    <string name="nav_settings_title">"Settings"</string>
    <string name="nav_settings_user_details">"User details"</string>
    <string name="nav_settings_language">"Language"</string>
    <string name="nav_settings_app_language">"App language"</string>
    <string name="nav_settings_change_password">"Change password"</string>
    <string name="login_title">"Sign in"</string>
    <string name="login_submit_title">"Sign in"</string>
    <string name="register_submit_title">"Register"</string>
    <string name="forgot_password_title">"Forgot Your Password?"</string>
    <string name="forgot_password_description_title">"Please enter your registered email address so that we can send you a recovery PIN."</string>
    <string name="forgot_password_send">"Send"</string>
    <string name="access_sharing_title">"Add new access"</string>
    <string name="access_sharing_new_user_title">"Add new access"</string>
    <string name="access_sharing_new_user_allow">"Allow access"</string>
    <string name="access_sharing_new_user_selection">"Select an email address from contacts"</string>
    <string name="access_sharing_new_user_access_details">"Access Details"</string>
    <string name="access_sharing_admin_role">"Full with sharing permissions"</string>
    <string name="access_sharing_user_role">"Parcel pickup only"</string>
    <string name="access_sharing_warning_message">"Are you sure you want to remove access to %s?"</string>
    <string name="toast_access_sharing_remove_success">"Successfully removed user %s from group!"</string>
    <string name="toast_access_sharing_remove_error">"Error while removing user access, please try again later!"</string>
    <string name="app_generic_confirm">"Confirm"</string>
    <string name="app_generic_cancel">"Cancel"</string>
    <string name="app_generic_sign_in">"Sign in"</string>
    <string name="app_generic_name">"Name"</string>
    <string name="app_generic_phone">"Phone"</string>
    <string name="app_generic_group">"Group name"</string>
    <string name="app_generic_address">"Address"</string>
    <string name="app_generic_email">"Email"</string>
    <string name="app_generic_submit">"Submit"</string>
    <string name="app_generic_notifications">"Notifications"</string>
    <string name="app_generic_push_notifications">"Push notifications"</string>
    <string name="app_generic_clear_all">"Clear all"</string>
    <string name="app_generic_password_recovery">"Forgot Your Password?"</string>
    <string name="app_generic_pickup_parcel">"Pickup parcel"</string>
    <string name="pickup_parcel_title">"Pickup parcel"</string>
    <string name="app_generic_send_parcel">"Send parcel"</string>
    <string name="app_generic_access_sharing">"Access sharing"</string>
    <string name="app_generic_next">"Next"</string>
    <string name="app_generic_finish">"Finish"</string>
    <string name="app_generic_help">"Help"</string>
    <string name="app_generic_no_ble">"Please turn Bluetooth on"</string>
    <string name="send_parcel_available">"%s available"</string>
    <string name="reset_password_title">"Reset Your Password"</string>
    <string name="reset_password_description_title">"Please enter your new password."</string>
    <string name="reset_password_new">"New password"</string>
    <string name="reset_password_pin">"Recovery pin*"</string>
    <string name="reset_password_confirm">"Confirm password"</string>
    <string name="reset_password_done">"Done"</string>
    <string name="edit_user_validation_blank_fields_exist">"Please enter all user information."</string>
    <string name="access_sharing_pop_up_title">"Share your key"</string>
    <string name="nav_ttc_subtitle">"Before proceeding, please read our T&amp;C:"</string>
    <string name="locker_details_deactivation_hint">"Are you sure you want to deactivate this locker?"</string>
    <string name="pickup_parcel_delete_content">"Are you sure you want to delete this key?"</string>
    <string name="generated_pin_title">"We have generated a new PIN for your delivery:"</string>
    <string name="generated_pin_description">"Please write this PIN down under special delivery notes on your courier's pickup form."</string>
    <string name="ttc_btn_accept">"I accept terms &amp; conditions"</string>
</resources>