<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingTop="16dp"

    android:background="@color/colorWhite">

    <hr.sil.android.smartlockers.enduser.fonts.view.fonts.TextViewBoldFont
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"

        android:paddingLeft="16dp"
        android:paddingRight="16dp"

        android:gravity="left|center_vertical"
        android:text="@string/access_sharing_pop_up_title"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <hr.sil.android.smartlockers.enduser.fonts.view.fonts.TextViewRegularFont
        android:id="@+id/tvDialogDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"

        android:paddingLeft="16dp"
        android:paddingRight="16dp"

        android:gravity="left|center_vertical"
        android:text="@string/pickup_parcel_delete_content"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle" />


    <hr.sil.android.schlauebox.fonts.ButtonWithFont
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"

        android:text="@string/app_generic_cancel"
        android:textColor="@color/colorDarkAccent"

        app:layout_constraintEnd_toStartOf="@id/btnConfirm"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogDescription" />

    <hr.sil.android.schlauebox.fonts.ButtonWithFont
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"

        android:text="@string/app_generic_confirm"
        android:textColor="@color/colorDarkAccent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogDescription" />

    <View
        app:layout_constraintTop_toBottomOf="@+id/btnCancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="15dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
