<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/colorWhite"

    android:paddingTop="16dp">

    <hr.sil.android.smartlockers.enduser.fonts.view.fonts.TextViewBoldFont
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"

        android:gravity="left|center_vertical"
        android:paddingLeft="16dp"

        android:paddingRight="16dp"
        android:text="@string/access_sharing_pop_up_title"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tvErrorMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle">

        <hr.sil.android.schlauebox.fonts.EdittextWithFont
            android:id="@+id/pickupPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="14sp"

            android:hint="@string/app_generic_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <hr.sil.android.smartlockers.enduser.fonts.view.fonts.TextViewRegularFont
        android:id="@+id/tvErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"

        android:gravity="left|center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/edit_user_validation_blank_fields_exist"
        android:textColor="@color/colorError"
        android:textSize="14sp"

        android:visibility="gone"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clEmail" />


    <hr.sil.android.schlauebox.fonts.ButtonWithFont
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"

        android:text="@string/app_generic_cancel"
        android:textColor="@color/colorDarkAccent"

        app:layout_constraintEnd_toStartOf="@id/btnConfirm"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrorMessage" />

    <hr.sil.android.schlauebox.fonts.ButtonWithFont
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"

        android:text="@string/app_generic_confirm"
        android:textColor="@color/colorDarkAccent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrorMessage" />

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCancel" />


</androidx.constraintlayout.widget.ConstraintLayout>
