<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <hr.sil.android.smartlockers.enduser.fonts.view.fonts.TextViewRegularFont
        android:id="@+id/tvNotify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/locker_details_deactivation_hint"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <hr.sil.android.schlauebox.fonts.ButtonWithFont
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@null"
        android:text="@string/app_generic_confirm"
        app:layout_constraintEnd_toStartOf="@id/btnCancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNotify" />

    <hr.sil.android.schlauebox.fonts.ButtonWithFont
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@null"
        android:text="@string/app_generic_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btnConfirm"
        app:layout_constraintTop_toBottomOf="@+id/tvNotify" />


    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>
