<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.intro.TCInvitedUserActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"  >

            <TextView
                android:id="@+id/tvTitleToolbar"
                style="@style/HeaderToolbar"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_generic_privacy_policy"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />


        </androidx.appcompat.widget.Toolbar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_ttc_subtitle"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_centerInParent="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorBlack" />

        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollViewTerms"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.7">

            <LinearLayout
                android:id="@+id/llTermsAndConditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ttc_main_conditions"
                    android:textColor="@color/colorBlack"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp" />

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center">

            <Button
                android:id="@+id/btnAcceptTermsConditions"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:background="@drawable/rounded_disabled_button"
                android:text="@string/ttc_btn_accept"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>