<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/llTopLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/img_onboarding_start"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/schlauebox_logo_invert"
            android:layout_marginTop="40dp"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/llTopLayout"
        android:layout_marginTop="10dp" 
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/intro_register_your_account"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:text="@string/intro_register_your_account"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:visibility="gone"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:textSize="17sp"
            android:visibility="gone"
            android:text="@string/intro_start_slide_content"
            android:layout_margin="16dp"/>

        <Button
            android:id="@+id/introStartSignIn"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:text="@string/app_generic_sign_in"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"  />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>