<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"

    android:background="@color/colorWhite">

    <hr.sil.android.smartlockers.enduser.fonts.view.fonts.TextViewRegularFont
        android:id="@+id/pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/generated_pin_title"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:letterSpacing="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rlPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_pin_layout"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"

        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@+id/pin"  >

        <ProgressBar
            android:id="@+id/progressCircular"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"/>

        <hr.sil.android.smartlockers.enduser.fonts.view.fonts.TextViewRegularFont
            android:id="@+id/tvGeneratedPinFromBackend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:visibility="invisible"
            android:text="1259"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textStyle="bold"
            android:letterSpacing="1.2"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <hr.sil.android.smartlockers.enduser.fonts.view.fonts.TextViewRegularFont
        android:id="@+id/tvPinDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/generated_pin_description"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:letterSpacing="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlPin" />

    <hr.sil.android.schlauebox.fonts.ButtonWithFont
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@null"
        android:text="@string/app_generic_cancel"

        app:layout_constraintEnd_toStartOf="@id/btnConfirm"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPinDescription" />


    <hr.sil.android.schlauebox.fonts.ButtonWithFont
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@null"
        android:text="@string/app_generic_confirm"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/tvPinDescription"/>


    <View
        app:layout_constraintTop_toBottomOf="@+id/btnCancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="15dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
